--- a/tekton/deploy-to-ibm-cloud-functions.yaml
+++ b/tekton/deploy-to-ibm-cloud-functions.yaml
@@ -31,6 +31,6 @@ spec:
           ibmcloud plugin list;
           ibmcloud plugin update cloud-functions;
           ibmcloud plugin list;
-          ibmcloud target -o orgforharold -s Space1;
+          ibmcloud target -o hjohnson@pl.ibm.com -s Space1;
           ibmcloud fn deploy -m $(workspaces.source.path)/$(params.path-to-manifest-file);
           ibmcloud fn action get -r helloTekton;
